# XCS224R-A2

./: HOMEWORK.md  README.md  TRAINING_SUMMARY.md  XCS224R-Mod2-Summary.md  notes.md  pyproject.toml
src/: environment.yml  environment_cuda.yml  grader.py  logger.py  plot_all_metrics.py  plot_metrics.py  run_train_with_log.py  run_train_with_log.sh  submission.py  train.py  view_tensorboard.py
tex/: 00-intro.tex
